[gd_scene load_steps=2 format=3 uid="uid://dd0603anu2r1d"]

[ext_resource type="Script" uid="uid://dq5yxofal01ah" path="res://Main.gd" id="1_ig7tw"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ig7tw")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 214.0
offset_top = 95.0
offset_right = 619.0
offset_bottom = 299.0
scale = Vector2(1.72, 1.72)

[node name="Content" type="TextEdit" parent="Panel"]
layout_mode = 0
offset_left = 11.0
offset_top = 58.0
offset_right = 292.0
offset_bottom = 188.0
placeholder_text = "Text..."

[node name="Name" type="LineEdit" parent="Panel"]
layout_mode = 0
offset_left = 11.0
offset_top = 13.0
offset_right = 187.0
offset_bottom = 44.0
placeholder_text = "Name..."

[node name="Number" type="SpinBox" parent="Panel"]
layout_mode = 0
offset_left = 205.0
offset_top = 13.0
offset_right = 291.562
offset_bottom = 44.0

[node name="Color" type="ColorPickerButton" parent="Panel"]
layout_mode = 0
offset_left = 304.0
offset_top = 13.0
offset_right = 395.0
offset_bottom = 188.0

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 149.0
offset_right = -512.0
offset_bottom = 187.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.8, 1.8)
columns = 2

[node name="Save" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Save"

[node name="Save_dialog" type="FileDialog" parent="GridContainer/Save"]
initial_position = 2
access = 2
filters = PackedStringArray("*.json")
use_native_dialog = true

[node name="Load" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Load"

[node name="Load_dialog" type="FileDialog" parent="GridContainer/Load"]
title = "Open a File"
initial_position = 2
ok_button_text = "Open"
file_mode = 0
access = 2
use_native_dialog = true

[connection signal="pressed" from="GridContainer/Save" to="." method="_on_save_pressed"]
[connection signal="file_selected" from="GridContainer/Save/Save_dialog" to="." method="_on_save_dialog_file_selected"]
[connection signal="pressed" from="GridContainer/Load" to="." method="_on_load_pressed"]
[connection signal="file_selected" from="GridContainer/Load/Load_dialog" to="." method="_on_load_dialog_file_selected"]
